# roscopter2

roscopter/: CMakeLists.txt  package.xml
roscopter/include/ekf/: estimator_ros.hpp
roscopter/params/: multirotor.yaml
roscopter/src/controller/: controller_ros.cpp
roscopter/src/ekf/: estimator_continuous_discrete.cpp  estimator_ekf.cpp  estimator_ros.cpp
roscopter_msgs/: CMakeLists.txt
roscopter_sim/: CMakeLists.txt  package.xml
roscopter_sim/src/: mocap_gnss.cpp  mocap_magnetometer.cpp  mocap_translation_node.cpp
roscopter_sim/src/utils/: geomag.c
